--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,11 +6,12 @@
 #canvas
 
 %p
-    A clone of http://koalastothemax.com/, but in pure JS with no helper graphic libraries, and drawing using the DOME elements.
+    A clone of
+    %a(href="http://koalastothemax.com/") http://koalastothemax.com/
+    , but in pure JS with no helper graphic libraries, and drawing using the DOM elements.
 
 
 =javascript_include_tag "http://code.jquery.com/jquery-1.7.2.min.js"
-=javascript_include_tag "https://raw.github.com/devongovett/png.js/master/zlib.js"
-=javascript_include_tag "https://raw.github.com/devongovett/png.js/master/png.js"
+=javascript_include_tag "https://rawgithub.com/devongovett/png.js/master/zlib.js"
+=javascript_include_tag "https://rawgithub.com/devongovett/png.js/master/png.js"
 =javascript_include_tag "canvas"
-
