--- a/stylesheets/canvas.css
+++ b/stylesheets/canvas.css
@@ -1,3 +1,4 @@
+/* line 17, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -14,46 +15,57 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline; }
 
-body {
+/* line 22, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+html {
   line-height: 1; }
 
+/* line 24, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
+/* line 26, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/* line 28, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
+/* line 30, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
+  /* line 103, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
+/* line 32, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
+/* line 116, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
+/* line 4, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 body {
   padding: 50px; }
 
+/* line 7, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 #canvas {
   display: none;
   position: relative;
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2); }
+  /* line 11, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
   #canvas p {
     display: block;
     position: absolute;
