--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,12 +2,13 @@
     %title PNG in canvas
     = stylesheet_link_tag "canvas"
 
-%p
+%p.p
     A clone of
     %a(href="http://koalastothemax.com/") http://koalastothemax.com/
     , but in pure JS with no helper graphic libraries, and drawing using the DOM elements.
 
-#canvas
+.canvas-wrap
+    #canvas
 
 =javascript_include_tag "http://code.jquery.com/jquery-1.7.2.min.js"
 =javascript_include_tag "https://rawgithub.com/devongovett/png.js/master/zlib.js"
