--- a/source/stylesheets/canvas.css.sass
+++ b/source/stylesheets/canvas.css.sass
@@ -3,16 +3,21 @@
 
 body
     padding: 50px
+
+.p
+    margin: 10px 0
     font: 14px Tahoma
     color: #333
 
-p
-    margin: 10px 0
+
+.canvas-wrap
+    +box-shadow(0 0 10px 2px rgba(0, 0, 0, 0.2))
+    padding: 3px
+    +inline-block
+    visibility: hidden
 
 #canvas
-    display: none
     position: relative
-    +box-shadow(0 0 10px 2px rgba(0, 0, 0, 0.2))
     p
         display: block
         position: absolute
