--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,8 +9,9 @@
 
 .canvas-wrap
     #canvas
+        Loading, please wait...
 
 =javascript_include_tag "http://code.jquery.com/jquery-1.7.2.min.js"
-=javascript_include_tag "https://rawgithub.com/devongovett/png.js/master/zlib.js"
-=javascript_include_tag "https://rawgithub.com/devongovett/png.js/master/png.js"
+=javascript_include_tag "https://rawgit.com/devongovett/png.js/master/zlib.js"
+=javascript_include_tag "https://rawgit.com/devongovett/png.js/master/png.js"
 =javascript_include_tag "canvas"
