--- a/stylesheets/canvas.css
+++ b/stylesheets/canvas.css
@@ -1,4 +1,4 @@
-/* line 17, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 5, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,74 +19,70 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, /Users/admin/.rvm/gems/ruby-1.9.3-p327/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+/* line 116, /Users/admin/.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block; }
 
 /* line 4, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 body {
-  padding: 50px; }
+  padding: 50px;
+  font: 14px Tahoma; }
 
-/* line 7, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
+/* line 8, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 .p {
   margin: 10px 0;
-  font: 14px Tahoma;
-  color: #333333; }
+  color: #333; }
 
 /* line 13, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 .canvas-wrap {
-  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   padding: 3px;
-  display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  zoom: 1;
-  *display: inline;
-  visibility: hidden; }
+  *zoom: 1;
+  *display: inline; }
 
-/* line 19, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
+/* line 18, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
 #canvas {
   position: relative; }
-  /* line 21, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
+  /* line 20, /Users/admin/Work/hover-dover/source/stylesheets/canvas.css.sass */
   #canvas p {
     display: block;
     position: absolute;
-    -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+    -webkit-border-radius: 50%;
     border-radius: 50%; }
