--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -11,7 +11,7 @@
     #canvas
         Loading, please wait...
 
-=javascript_include_tag "http://code.jquery.com/jquery-1.7.2.min.js"
+=javascript_include_tag "https://code.jquery.com/jquery-1.7.2.min.js"
 =javascript_include_tag "https://rawgit.com/devongovett/png.js/master/zlib.js"
 =javascript_include_tag "https://rawgit.com/devongovett/png.js/master/png.js"
 =javascript_include_tag "canvas"
